# HyperMaze

./: Cargo.toml  README.md  build-web-release.sh  build-web.sh  run-web.sh
assets/: demo.json  demolarge.json  demotext.json
html/: hypermaze.wasm  index.html
src/: constants.rs  fpp_renderer.rs  main.rs  poincare_renderer.rs  top_down_renderer.rs
src/game/: hypermap.rs  mod.rs  svgloader.rs
src/hyperbolic_renderer/: mod.rs
src/poincare_renderer/: mod.rs
src/utils/: cartesianpoint.rs  color.rs  euclideanpoint.rs  hyperpoint.rs  kleinpoint.rs  mod.rs  poincarepoint.rs  point.rs  polarpoint.rs
src/window/: event.rs
static/: hypercasterv2.js  hypercasterv2.wasm.map  hypermaze.js  index.html
