[package]
name = "hypermaze"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = {version = "*", features = ["serde-serialize"]}
line_drawing = "*"
console_error_panic_hook = "0.1.6"
fps_clock = "*"
futures = {version = "0.3", features = ["thread-pool"]}

[profile.dev]
opt-level = 0